--- a/src/FubuMVC.Validation.Serenity/packages.config
+++ b/src/FubuMVC.Validation.Serenity/packages.config
@@ -1,22 +1,26 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Bottles" version="1.0.0.441" targetFramework="net40" />
+  <package id="Bottles" version="1.0.0.446" targetFramework="net40" />
   <package id="Castle.Core" version="3.0.0.4001" targetFramework="net40" />
   <package id="DotNetZip" version="1.9.1.8" targetFramework="net40" />
-  <package id="FubuCore" version="1.0.0.225" targetFramework="net40" />
-  <package id="FubuLocalization" version="0.9.5.124" targetFramework="net40" />
-  <package id="FubuMVC.Core" version="1.0.1.1407" targetFramework="net40" />
-  <package id="FubuMVC.SelfHost" version="1.0.1.1407" targetFramework="net40" />
-  <package id="HtmlTags" version="1.2.0.145" targetFramework="net40" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="4.0.20710.0" targetFramework="net40" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="4.0.20710.0" targetFramework="net40" />
-  <package id="Microsoft.AspNet.WebApi.SelfHost" version="4.0.20918.0" targetFramework="net40" />
-  <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net40" />
+  <package id="FubuCore" version="1.0.1.228" targetFramework="net40" />
+  <package id="FubuLocalization" version="0.9.5.127" targetFramework="net40" />
+  <package id="FubuMVC.Core" version="1.0.1.1416" targetFramework="net40" />
+  <package id="FubuMVC.Core.Assets" version="0.9.9.385" targetFramework="net40" />
+  <package id="FubuMVC.Core.UI" version="1.0.1.408" targetFramework="net40" />
+  <package id="FubuMVC.Core.View" version="1.0.0.385" targetFramework="net40" />
+  <package id="FubuMVC.Katana" version="1.0.1.1416" targetFramework="net40" />
+  <package id="FubuMVC.OwinHost" version="1.0.1.1416" targetFramework="net40" />
+  <package id="FubuMVC.StructureMap" version="1.0.1.1416" targetFramework="net40" />
+  <package id="HtmlTags" version="1.2.0.147" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net40" />
+  <package id="Owin" version="1.0" targetFramework="net40" />
+  <package id="Owin.Extensions" version="0.6.4" targetFramework="net40" />
   <package id="Selenium.RC" version="2.25.1" targetFramework="net40" />
   <package id="Selenium.Support" version="2.29.1" targetFramework="net40" />
   <package id="Selenium.WebDriver" version="2.29.1" targetFramework="net40" />
   <package id="Selenium.WebDriverBackedSelenium" version="2.29.1" targetFramework="net40" />
-  <package id="Serenity" version="0.9.8.119" targetFramework="net40" />
-  <package id="Storyteller2" version="2.0.0.12" targetFramework="net40" />
+  <package id="Serenity" version="0.9.8.125" targetFramework="net40" />
+  <package id="Storyteller2" version="2.0.0.15" targetFramework="net40" />
+  <package id="structuremap" version="2.6.3" />
 </packages>
